--- a/src/pages/products/products.scss
+++ b/src/pages/products/products.scss
@@ -1,3 +1,27 @@
 page-products {
 
+    ion-card {
+        margin:  0;
+    }
+
+    h2{
+        text-align: center;margin-top: 5px;
+        color:white;
+    }
+
+    .bg{
+        height: 270px;width: 100%;
+        margin: 0;
+        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#299a0b+0,299a0b+100;Green+Flat+%231 */
+background: #299a0b; /* Old browsers */
+background: -moz-linear-gradient(top, #299a0b 0%, #299a0b 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, #299a0b 0%,#299a0b 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, #299a0b 0%,#299a0b 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#299a0b', endColorstr='#299a0b',GradientType=0 ); /* IE6-9 */
+    }
+
+    .bg h2{
+        color: white;
+        margin-top: 10px;
+    }
 }
