--- a/src/pages/recepies/recepies.scss
+++ b/src/pages/recepies/recepies.scss
@@ -8,11 +8,13 @@ page-recepies {
 
     .card-title {
       position: absolute;
-      top: 36%;
+     bottom:0;
       font-size: 2.0em;
       width: 100%;
       font-weight: bold;
       color: #fff;
+      padding: 10px;
+    background: rgba(0,0,0,0.4)
     }
 
     .card-subtitle {
